# worldmonitor

./: .vercelignore  README.md  edgeone.json  package.json  vercel.json  vite.config.ts
.github/workflows/: build-android.yml  build-desktop.yml  sync-upstream.yml  test.yml
api/: _notification-webhook-ssrf.ts  notification-channels.ts
convex/: http.ts
convex/__tests__/: telegramWebhook.test.ts
docker/: nginx-security-headers.conf  nginx.conf
pro-test/: prerender.mjs  vite.config.ts
pro-test/src/: welcome-main.tsx
public/pro/: welcome.html
scripts/: ais-relay.cjs  edgeone-postbuild.mjs  enforce-rate-limit-policies.mjs  notification-relay.cjs  seed-digest-notifications.mjs  seed-fuel-prices.mjs  seed-unrest-events.mjs
scripts/lib/: notification-webhook-ssrf.cjs
server/: gateway.ts
server/_shared/: llm.ts  rate-limit.ts
shared/: stocks.json
src/: App.ts  main.ts
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/app/: country-intel.ts
src/bootstrap/: inp-report.ts
src/components/: AAIISentimentPanel.ts  BreakthroughsTickerPanel.ts  ChatAnalystPanel.ts  CotPositioningPanel.ts  CountersPanel.ts  CrossSourceSignalsPanel.ts  DailyMarketBriefPanel.ts  DeckGLMap.ts  DeductionPanel.ts  EconomicCalendarPanel.ts  EnergyCrisisPanel.ts  EnergyDisruptionsPanel.ts  EnergyRiskOverviewPanel.ts  ForecastPanel.ts  FuelShortagePanel.ts  GlobeMap.ts  HeroSpotlightPanel.ts  LatestBriefPanel.ts  LiveNewsPanel.ts  MacroTilesPanel.ts  Map.ts  MarketPanel.ts  NationalDebtPanel.ts  Panel.ts  PipelineStatusPanel.ts  PositiveNewsFeedPanel.ts  ProgressChartsPanel.ts  RegionalIntelligenceBoard.ts  RenewableEnergyPanel.ts  ResilienceWidget.ts  SocialVelocityPanel.ts  SpeciesComebackPanel.ts  StockAnalysisPanel.ts  StockBacktestPanel.ts  StorageFacilityMapPanel.ts  ThreatTimelinePanel.ts  UnifiedSettings.ts  WorldClockPanel.ts  YieldCurvePanel.ts
src/config/: feeds.ts  geo.ts  map-layer-definitions.ts  scenario-templates.ts
src/locales/: ar.json  bg.json  cs.json  de.json  el.json  en.json  es.json  fa.json  fr.json  hi.json  hr.json  hu.json  it.json  ja.json  ko.json  nl.json  pl.json  pt.json  ro.json  ru.json  sv.json  th.json  tr.json  vi.json  zh.json
src/services/: desktop-readiness.ts  entitlements.ts  followed-countries.ts  (+7 more)
tests/: country-brief-i18n.test.mjs  csp-filter.test.mjs  dashboard-critical-css.test.mjs  deploy-config.test.mjs  dom-utils.test.mts  inp-report.test.mts  notification-webhook-ssrf.test.mts  positive-events-seed-failure.test.mjs  premium-stock-gateway.test.mts  rate-limit.test.mts  seed-fuel-prices.test.mjs  seed-unrest-gdelt-fetch.test.mjs
(+8 files in other folders)
