[package]
name = "world-monitor"
version = "2.8.0"
description = "World Monitor desktop application"
authors = ["World Monitor"]
edition = "2021"

[lib]
name = "world_monitor_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
getrandom = "0.2"

# 桌面端：使用系统 keyring + native-tls（macOS / Windows / Linux 原生后端）
[target.'cfg(not(target_os = "android"))'.dependencies]
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-rust"] }
reqwest = { version = "0.12", default-features = false, features = ["native-tls"] }

# Android：rustls-tls（NDK 交叉编译无需 OpenSSL）+ getrandom js feature
[target.'cfg(target_os = "android")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = "s"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]
